<resources>
    <string name="app_name">Social+</string>
    <string name="email_hint">Student Email Address</string>
    <string name="password_hint">Password (At Least 6 Characters)</string>
    <string name="password_hint_login">Password</string>
    <string name="profile_onboarding_hint">Profile Name</string>
    <string name="post_caption_hint">Add Post Caption</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="change_password">New Password (At Least 6 Characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>
    <string name="feedback">Feedback</string>
    <string name="send">Send</string>
    <string name="save_profile">Save</string>
    <string name="post">Post</string>
    <string name="add_comment">Comment</string>
    <string name="profile_name">Profile Name</string>
    <string name="caption">Caption</string>
    <string name="current_password">Current Password</string>
    <string name="date">15/05/2021</string>
    <string name="login_redirect">Not Registered? Register Here</string>
    <string name="register_redirect">Already Registered? Login Here</string>
    <string name="login_text">Start Sharing...</string>
    <string name="profile_text">One more step...</string>
    <string name="change_password_text">Update Password</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="delete_account_text">Deactivate User Account</string>
    <string name="feedback_text">Provide Feedback</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_account">My Account</string>
    <string name="menu_logout">Logout</string>
    <string name="likeCount">0 likes</string>
    <string name="commentCount">0 comments</string>
    <string name="comments">Comments</string>
    <string name="likes">Likes</string>
    <string name="category">Category</string>
    <string name="welcome">Welcome,</string>
    <string name="next">Next</string>
    <string name="edit_profile">Profile Information</string>
    <string name="no_posts">No posts yet :(</string>
    <string name="comments_hint">Add Comment</string>
    <string name="about_us">About Social+</string>
    <string name="account">Account Information</string>
    <string name="delete">Deactivate</string>
    <string name="edit_post_caption">Post Caption</string>
    <string name="search">Search</string>
    <string name="search_text">Social+ Search</string>
    <string name="search_hint">Search for Social+ User Posts</string>
    <string name="no_results">No results :(</string>
    <string name="add_post_text">Add New Post</string>
    <string name="edit_post_text">Edit Post Caption</string>
</resources>